# volkit

./: README.md
include/img/: colormap.h  ecat7img.h  img.h  imgloader.h  line2.h  point2.h  v.h  vffimg.h
include/tpc/: analyze.h  backup.h  branch.h  datetime.h  decpoint.h  ecat63.h  ecat7.h  halflife.h  idcrypt.h  ift.h  img.h  img_sif.h  imgdecay.h  imgfile.h  imgio.h  imgmatch.h  imgmax.h  imgunit.h  interfile.h  intex.h  libtpcimgiov.h  libtpcmiscv.h  libtpcroiv.h  memory_handler.h  micropet.h  nifti.h  oldroi.h  petc99.h  petunits.h  quots.h  rname.h  roi.h  sif.h  studynr.h  substitutions.h  swap.h  vol.h
include/vff/: vff.h
include/volgeo/: coord.h  cube.h  matrix.h  scalar.h
include/volimg/: colormap.h  ecat7img.h  img.h  imgloader.h  line2.h  vffimg.h
include/volren/: brick.h  coord.h  matrix.h  mode.h  plane.h  scalar.h  state.h  view.h  volren.h  volume.h
include/volsurf/: polygonise.h  volsurf.h
src/: CMakeLists.txt
src/atlas/: CMakeLists.txt  atlas.cpp  colormap.cpp  colormap.h  glwidget.cpp  glwidget.h  img.cpp  img.h  imgparams.h  imgwidget.cpp  imgwidget.h  imgwindow.cpp  imgwindow.h  polytool.cpp  polytool.h  ranges.cpp  ranges.h  sampletool.h  tool.h  toolbox.cpp  toolbox.h  v.cpp  v.h  volwidget.cpp  volwidget.h  volwindow.cpp  volwindow.h  window.cpp  window.h
src/cmake/: FindGLEW.cmake
src/libimg/: CMakeLists.txt  colormap.cpp  ecat7img.cpp  img.cpp  imgloader.cpp  v.cpp  vffimg.cpp
src/libtpcimgio/: CMakeLists.txt  HISTORY  README  TODO  analyze.c  ecat63ml.c  ecat63p.c  ecat63r.c  ecat63w.c  ecat7h.c  ecat7ml.c  ecat7p.c  ecat7r.c  ecat7w.c  img.c  img_ana.c  img_e63.c  img_e7.c  img_nii.c  img_sif.c  img_upet.c  imgdecay.c  imgfile.c  imgmatch.c  imgmax.c  imgunit.c  interfile.c  libtpcimgiov.c  micropet.c  nifti.c  sif.c  sifio.c  vol.c  weight.c
src/libtpcmisc/: CMakeLists.txt  HISTORY  README  TODO  backup.c  branch.c  datetime.c  decpoint.c  halflife.c  ift.c  iftfile.c  iftsrch.c  intex.c  libtpcmiscv.c  memory_handler.c  petc99.c  petunits.c  quots.c  rname.c  studynr.c  substitutions.c  swap.c
src/libtpcroi/: CMakeLists.txt  HISTORY  README  TODO  libtpcroiv.c  oldroi.c  roi.c
src/libvff/: CMakeLists.txt  vffp.c  vffr.c
src/libvolgeo/: CMakeLists.txt  coord.c  cube.c  matrix.c  scalar.c
src/libvolimg/: CMakeLists.txt  colormap.cpp  ecat7img.cpp  img.cpp  imgloader.cpp  vffimg.cpp
src/libvolren/: CMakeLists.txt  brick.c  coord.c  coord.h  cube.c  cube.h  matrix.c  matrix.h  mode.c  plane.c  scalar.c  scalar.h  state.c  view.c  volume.c
src/libvolsurf/: CMakeLists.txt  drawsurf.c  polygonise.c
src/qvol/: CMakeLists.txt  application.qrc  imgbrick.h  imgparams.cpp  imgwidget.h  imgwindow.cpp  sampletool.cpp  tool.h  volwidget.cpp  volwidget.h  volwindow.h
src/xvol/: CMakeLists.txt  main.cpp  window.cpp  xvol.cpp
