CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ATLAS)

SET(CMAKE_MODULE_PATH ${ATLAS_SOURCE_DIR}/cmake)

FIND_PACKAGE(Qt4)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLEW)

SET(CMAKE_C_FLAGS -Wall)
INCLUDE_DIRECTORIES(
    ${ATLAS_SOURCE_DIR}/../include
    ${ATLAS_SOURCE_DIR}/../include/tpc
    )

ADD_SUBDIRECTORY(libtpcmisc)
ADD_SUBDIRECTORY(libtpcimgio)
ADD_SUBDIRECTORY(libvff)
ADD_SUBDIRECTORY(libimg)
ADD_SUBDIRECTORY(libvolren)
ADD_SUBDIRECTORY(xvol)
ADD_SUBDIRECTORY(atlas)

