ADD_LIBRARY(tpcimgio
    ecat63r.c ecat63w.c ecat63p.c ecat63ml.c
    ecat7r.c ecat7w.c ecat7p.c ecat7ml.c ecat7h.c
    analyze.c interfile.c micropet.c nifti.c img_nii.c
    imgfile.c img_ana.c img_upet.c img_e63.c img_e7.c
    img_sif.c imgunit.c imgmax.c imgdecay.c imgmatch.c vol.c
    img.c sifio.c sif.c weight.c libtpcimgiov.c
    )

